--- a/Traveldiary/app/src/main/res/layout/activity_show_message.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_show_message.xml
@@ -5,7 +5,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ShowMessageActivity">
+        tools:context=".showMessages.ShowMessageActivity">
 
     <ListView android:layout_width="match_parent"
               android:id="@+id/list_view"
