--- a/Traveldiary/app/src/main/res/layout/activity_main.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.app.FragmentTabHost
+<androidx.fragment.app.FragmentTabHost
     android:id="@android:id/tabhost"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,4 +20,4 @@
             android:layout_height="match_parent"
             android:layout_above="@android:id/tabs"></FrameLayout>
     </RelativeLayout>
-</android.support.v4.app.FragmentTabHost>
+</androidx.fragment.app.FragmentTabHost>
