--- a/Traveldiary/app/src/main/res/layout/messages_page.xml
+++ b/Traveldiary/app/src/main/res/layout/messages_page.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:padding="10dp"
-              android:layout_height="match_parent">
-    <LinearLayout android:layout_width="match_parent"
-                  android:background="@drawable/card_style"
-                  android:layout_height="wrap_content">
+<LinearLayout android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:padding="20dp"
+              xmlns:android="http://schemas.android.com/apk/res/android">
+    <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <LinearLayout android:layout_width="match_parent"
                       android:orientation="vertical"
                       android:padding="20dp"
@@ -73,5 +72,5 @@
                         android:layout_height="30dp" />
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
