--- a/Traveldiary/app/src/main/res/layout/activity_login.xml
+++ b/Traveldiary/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:layout_gravity="center_horizontal"
     android:background="@drawable/loginbacground"
     android:orientation="vertical"
-    tools:context=".Login.WelcomActivity">
+    tools:context=".Login.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
