--- a/Traveldiary/app/src/main/res/layout/myself_layout.xml
+++ b/Traveldiary/app/src/main/res/layout/myself_layout.xml
@@ -4,8 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    >
+    android:gravity="center_horizontal">
     <LinearLayout
         android:id="@+id/myself"
         android:background="#66C0C0C0"
