--- a/Traveldiary/app/src/main/res/values/colors.xml
+++ b/Traveldiary/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="editTextCorlor">#D3D3D3</color>
     <color name="cursorCorlor">#1E90FF</color>
     <color name="settingCorlor">#ededed</color>
+    <color name="changeColor">#bcbcbc</color>
 </resources>
